# factor-vae

./: .gitignore  README.md  losses.py  metrics.py  pyproject.toml  requirements.txt  train.py  utils.py
data/: __init__.py  dataset.py  preprocess.py
factorvae/: __init__.py  factor_decoder.py  factor_encoder.py  factor_predictor.py  feature_extractor.py
